--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "horned-owl"
 version = "0.1.0"
 authors = ["Phillip Lord <phillip.lord@russet.org.uk>"]
 
+[dependencies]
+xml-rs = "0.7.0"
+
 [dev-dependencies]
 bencher = "0.1.4"
 
