--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 authors = ["Phillip Lord <phillip.lord@russet.org.uk>"]
 
 [dependencies]
+bimap = "0.1.3"
+
 xml-rs = "0.7.0"
+curie = "0.0.4"
+
 
 [dev-dependencies]
 bencher = "0.1.4"
