--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,12 @@ authors = ["Phillip Lord <phillip.lord@russet.org.uk>"]
 [dependencies]
 bimap = "0.1.3"
 
-quick-xml="0.10.1"
-xml-rs = "0.7.0"
-curie = "0.0.4"
+quick-xml="0.11.0"
+curie = "0.0.5"
 
 [dev-dependencies]
 bencher = "0.1.4"
+mktemp = "0.3.1"
 
 [[bench]]
 name = "horned"
