Update to trait based reading framework
This replaces the old parser with two trait based calls. Code has been
totally refactored, with loops concentrated in one place. Annotations
are fully supported on all axioms.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.3.0"
 authors = ["Phillip Lord <phillip.lord@russet.org.uk>"]
 
 [dependencies]
-quick-xml="0.12.1"
+quick-xml="0.12.4"
 curie = "0.0.8"
 clap = "2.31.2"
+failure = "0.1.2"
 
 [dev-dependencies]
 bencher = "0.1.4"
