--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Phillip Lord <phillip.lord@russet.org.uk>"]
 quick-xml="0.12.4"
 curie = "0.0.8"
 clap = "2.31.2"
+failure = "0.1.2"
 
 [dev-dependencies]
 bencher = "0.1.4"
