--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "horned-owl"
 version = "0.3.0"
 authors = ["Phillip Lord <phillip.lord@russet.org.uk>"]
+description = "Library and Command Line tools for OWL Ontologies"
+
+repository = "https://github.com/phillord/horned-owl"
+
+keywords = ["xml", "ontology", "owl", "command line"]
+license = "LGPL3"
 
 [dependencies]
 quick-xml="0.12.4"
