Add horned-summary command

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,12 @@ categories = ["command-line-utilities", "parsing",
 license = "LGPL-3.0"
 
 [dependencies]
-quick-xml="0.12.4"
 curie = "0.0.8"
 clap = "2.31.2"
 failure = "0.1.2"
 enum_meta = "0.6.0"
+quick-xml="0.12.4"
+indexmap="1.0.2"
 
 [dev-dependencies]
 bencher = "0.1.4"
