--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ categories = ["command-line-utilities", "parsing",
               "rendering", "science", "data-structures"]
 
 license = "LGPL-3.0"
+edition = "2018"
 
 [dependencies]
 curie = "0.0.8"
