--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ license = "LGPL-3.0"
 edition = "2018"
 
 [dependencies]
-at-collection = "0.1.0"
+at-collection = "0.3.0"
+#at-collection = {path="../at-collection"}
 curie = "0.0.8"
 clap = "2.31.2"
 failure = "0.1.2"
