Add debugging, robustness for ordering

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,14 @@ curie = "0.0.8"
 clap = "2.31.2"
 failure = "0.1.2"
 enum_meta = "0.6.0"
+log = {version="0.4.8"}
 quick-xml="0.12.4"
 indexmap="1.0.2"
 sophia = {version="0.3.0", features=["xml"]}
 
 [dev-dependencies]
 bencher = "0.1.4"
+env_logger = "0.7.1"
 mktemp = "0.3.1"
 pretty_assertions = "0.6.1"
 slurp = "1.0.1"
