--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,9 @@ mktemp = "0.3.1"
 pretty_assertions = "0.6.1"
 slurp = "1.0.1"
 
+[profile.release]
+debug = true
+
 [[bench]]
 name = "horned"
 harness = false
