--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,9 @@ lazy_static="1.4.0"
 log = {version="0.4.8"}
 quick-xml="0.12.4"
 indexmap="1.0.2"
-sophia = {version="0.5.3",features=["xml"],git="https://github.com/pchampin/sophia_rs.git",branch="rio_xml"}
+sophia = {version="0.6.0",features=["xml"]}
+sophia_api = "0.6.0"
+sophia_iri = "0.6.0"
 
 [dev-dependencies]
 bencher = "0.1.4"
