--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,8 @@ lazy_static="1.4.0"
 log = {version="0.4.8"}
 quick-xml="0.12.4"
 indexmap="1.0.2"
-sophia = {version="0.6.2",features=["xml"]}
-sophia_api = "0.6.2"
-sophia_iri = "0.6.2"
+rio_api="0.5.1"
+rio_xml="0.5.1"
 
 [dev-dependencies]
 assert_cmd = "0.10"
