--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ quick-xml="0.12.4"
 indexmap="1.0.2"
 rio_api={git="https://github.com/oxigraph/rio.git"}
 rio_xml={git="https://github.com/oxigraph/rio.git"}
+# rio_api={path="./rio/api"}
+# rio_xml={path="./rio/xml"}
+
 
 [dev-dependencies]
 assert_cmd = "0.10"
