--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ rio_api="0.5.3"
 rio_xml="0.5.3"
 pretty_rdf="0.1.0"
 ##pretty_rdf={path="./pretty_rdf"}
+slurp = "1.0.1"
 
 [dev-dependencies]
 assert_cmd = "0.10"
