--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,10 @@ edition = "2018"
 curie = "0.0.8"
 clap = "2.31.2"
 enum_meta = "0.6.0"
-failure = "0.1.2"
+thiserror = "1.0"
 lazy_static="1.4.0"
 log = {version="0.4.8"}
-quick-xml="0.12.4"
+quick-xml={version="0.16.0",features=["encoding"]}
 indexmap="1.0.2"
 rio_api="0.6.1"
 rio_xml="0.6.1"
@@ -28,6 +28,7 @@ pretty_rdf="0.1.2"
 ##pretty_rdf={path="./pretty_rdf"}
 slurp = "1.0.1"
 ureq="2.1.1"
+
 
 [dev-dependencies]
 assert_cmd = "0.10"
