(cargo-release) start next development iteration 0.12.1-alpha.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "horned-owl"
-version = "0.12.0"
+version = "0.12.1-alpha.0"
 authors = ["Phillip Lord <phillip.lord@russet.org.uk>"]
 description = "Library and Command Line tools for OWL Ontologies"
 
