--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "horned-owl"
-version = "0.13.0"
+version = "0.13.1-alpha"
 authors = ["Phillip Lord <phillip.lord@russet.org.uk>"]
 description = "Library and Command Line tools for OWL Ontologies"
 
