--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "horned-owl"
 version = "0.13.1-alpha"
 authors = ["Phillip Lord <phillip.lord@russet.org.uk>"]
-description = "Library and Command Line tools for OWL Ontologies"
+description = "Library for OWL Ontologies"
 
 repository = "https://github.com/phillord/horned-owl"
 
@@ -15,7 +15,6 @@ edition = "2018"
 
 [dependencies]
 curie = "0.1.1"
-clap = "3.2.2"
 enum_meta = "0.6.0"
 thiserror = "1.0"
 lazy_static="1.4.0"
@@ -27,6 +26,9 @@ rio_xml="0.7.3"
 pretty_rdf="0.2.0"
 ##pretty_rdf={path="./pretty_rdf"}
 ureq={version="2.1.1", optional=true}
+
+[workspace]
+members=["horned-bin"]
 
 [features]
 remote = ["ureq"]
@@ -43,47 +45,6 @@ slurp = "1.0.1"
 
 [profile.release]
 debug = true
-
-[[bin]]
-name = "horned"
-path = "src/bin/horned.rs"
-
-[[bin]]
-name = "horned-big"
-path = "src/bin/horned_big.rs"
-
-[[bin]]
-name = "horned-compare"
-path = "src/bin/horned_compare.rs"
-
-[[bin]]
-name = "horned-dump"
-path = "src/bin/horned_dump.rs"
-
-[[bin]]
-name = "horned-materialize"
-path = "src/bin/horned_materialize.rs"
-
-[[bin]]
-name = "horned-parse"
-path = "src/bin/horned_parse.rs"
-
-[[bin]]
-name = "horned-round"
-path = "src/bin/horned_round.rs"
-
-[[bin]]
-name = "horned-summary"
-path = "src/bin/horned_summary.rs"
-
-[[bin]]
-name = "horned-triples"
-path = "src/bin/horned_triples.rs"
-
-[[bin]]
-name = "horned-unparsed"
-path = "src/bin/horned_unparsed.rs"
-
 
 [[bench]]
 name = "horned"
