--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,26 +20,29 @@ thiserror = "1.0"
 lazy_static="1.4.0"
 log = {version="0.4.8"}
 quick-xml={version="0.26.0"}
-indexmap="1.0.2"
-rio_api="0.7.1"
-rio_xml="0.7.3"
-pretty_rdf="0.2.0"
-##pretty_rdf={path="./pretty_rdf"}
+indexmap={workspace=true}
+pretty_rdf={workspace=true}
+rio_api={workspace=true}
+rio_xml={workspace=true}
 ureq={version="2.1.1", optional=true}
 
 [workspace]
 members=["horned-bin"]
+
+[workspace.dependencies]
+indexmap="1.0.2"
+pretty_rdf="0.2.0"
+rio_api="0.7.1"
+rio_xml="0.7.3"
 
 [features]
 remote = ["ureq"]
 
 [dev-dependencies]
 horned-owl = {path=".", features = ["remote"]}
-assert_cmd = "2.0.2"
 bencher = "0.1.4"
 env_logger = "0.9.0"
 mktemp = "0.4.1"
-predicates = "2.1.0"
 pretty_assertions = "1.0.0"
 slurp = "1.0.1"
 
