--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ lazy_static="1.4.0"
 log = {version="0.4.8"}
 quick-xml={version="0.26.0"}
 indexmap={workspace=true}
+oxiri = "0.2.2"
 pretty_rdf={workspace=true}
 rio_api={workspace=true}
 rio_xml={workspace=true}
