--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,8 @@ env_logger = "0.9.0"
 mktemp = "0.4.1"
 pretty_assertions = "1.0.0"
 slurp = "1.0.1"
+test-generator =  { version = "^0.3" }
+
 
 [profile.release]
 debug = true
