Add horned-bin to default-members of workspace
This means that commands like cargo run will work from the root
directory as expected.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ ureq={version="2.1.1", optional=true}
 
 [workspace]
 members=["horned-bin"]
+default-members=[".", "horned-bin"]
 
 [workspace.dependencies]
 indexmap="1.0.2"
