--- a/src/ont/bubo/Makefile
+++ b/src/ont/bubo/Makefile
@@ -1,10 +1,10 @@
 ## Use "&" to indicate a grouping target which is only available in
 ## make 4.3. It causes warnings in lower versions.
 define build_template
-  ../owl-rdf/$(1).owl ../owl-xml/$(1).owx ../owl-ttl/$1.ttl &: $1.clj
+  ../owl-rdf/$(1).owl ../owl-xml/$(1).owx ../owl-ttl/$1.ttl ../owl-functional/$(1).ofn&: $1.clj
 	bubo $1.clj
 
-  $(2)+=../owl-rdf/$(1).owl ../owl-xml/$(1).owx ../owl-ttl/$(1).ttl
+  $(2)+=../owl-rdf/$(1).owl ../owl-xml/$(1).owx ../owl-ttl/$(1).ttl ../owl-functional/$(1).ofn
 endef
 
 ## Exclude these because they will be generated when something else imports them
