Simplify pre-commit hooks
Hooks work in the same way, but we use simpler keys to achieve the
same thing and a standard hook for branches.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,25 +7,18 @@ repos:
        name: Untracked Files
        language: system
        entry: ./dev/untracked-files.sh
-       files: NONE
-       always_run: true
-       stages: [pre-commit, pre-push]
-    -  id: not-rfc
-       name: Not RFC
-       language: system
-       entry: ./dev/not-rfc.sh
-       files: NONE
-       always_run: true
+       pass_filenames: false
        stages: [pre-commit, pre-push]
     -  id: run-tests
        name: Running Test
        language: system
        entry: make pre-commit
-       files: NONE
-       always_run: true
+       pass_filenames: false
        stages: [pre-commit, pre-push]
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
     hooks:
     -   id: check-added-large-files
+    -   id: no-commit-to-branch
+        args: [--branch, rfc]
 
