Move benchmarking to criterion
Most of the tests have been preserved but are arranged now into test groups.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,7 @@ repos:
     rev: v4.6.0
     hooks:
     -   id: check-added-large-files
+        args: ["--maxkb=1000"]
     -   id: no-commit-to-branch
         args: [--branch, rfc]
 -   repo: https://github.com/doublify/pre-commit-rust
